[package]
name = "pentair-screenlogic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
pentair_wire_protocol = { path = "pentair_wire_protocol" }
tokio = { version = "1", features = ["full"] }
log = "0.4.0"
env_logger = "0.9.0"
tokio-util = "0.7.4"
bincode = "1.3.3"
serde = { version = "1.0.148", features = ["derive"] }
